# setfnlock

./: README.md  index.html  package.json
.github/workflows/: main.yml  release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  setfn.rs
src/components/: Home.vue
